package mastermindModelViewController.models;

public class ProposedCombination extends Combination {

    public ProposedCombination() {
        super();
    }
}
