package mastermindModelViewController.models;

public enum StateValue {
    START,
    PROPOSE_COMBINATIONS,
    ASK_RESUME,
    EXIT;
}
